# Logic-Vicharak

./: README.md
logic-analyzer-backend/: Cargo.toml
logic-analyzer-backend/src/: main.rs
logic-analyzer-fpga/shrike_logic_analyzer/: shrike_logic_analyzer.ffpga
logic-analyzer-fpga/shrike_logic_analyzer/ffpga/src/: main.v
logic-analyzer-frontend/: package-lock.json  package.json
logic-analyzer-frontend/src/app/: page.tsx
logic-analyzer-frontend/src/components/: LogicCanvas.tsx
shrike-mcu-bridge/: platformio.ini
shrike-mcu-bridge/src/: main.cpp
